--- a/test-output/index.html
+++ b/test-output/index.html
@@ -23,7 +23,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">1 suite</span>
+      <span class="top-banner-font-1">1 suite, 2 failed tests</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -37,7 +37,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" class="navigator-link" panel-name="suite-Ecommerce_test_run">
-              <span class="suite-name border-passed">Ecommerce test run</span>
+              <span class="suite-name border-failed">Ecommerce test run</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -90,7 +90,26 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">0 methods,   </span>
+                    <span class="method-stats">2 methods, 2 failed,   </span>
+                  </li>
+                  <li>
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-Ecommerce_test_run" class="hide-methods failed suite-Ecommerce_test_run"> (hide)</a> <!-- hide-methods failed suite-Ecommerce_test_run -->
+                      <a href="#" panel-name="suite-Ecommerce_test_run" class="show-methods failed suite-Ecommerce_test_run"> (show)</a> <!-- show-methods failed suite-Ecommerce_test_run -->
+                    </span>
+                    <div class="method-list-content failed suite-Ecommerce_test_run">
+                      <span>
+                        <img width="3%" src="failed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Ecommerce_test_run" title="com.ecommerce.selenium.pagefactory.framework.BroadLeaf_DesktopFlow" hash-for-method="Addtocart">Addtocart</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="failed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Ecommerce_test_run" title="com.ecommerce.selenium.pagefactory.framework.BroadLeaf_DesktopFlow" hash-for-method="Checkoutcart">Checkoutcart</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content failed suite-Ecommerce_test_run -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -102,6 +121,53 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Ecommerce_test_run" class="panel Ecommerce_test_run">
+          <div class="suite-Ecommerce_test_run-class-failed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="failed.png"/>
+              <span class="class-name">com.ecommerce.selenium.pagefactory.framework.BroadLeaf_DesktopFlow</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="Addtocart">
+                  </a> <!-- Addtocart -->
+                  <span class="method-name">Addtocart</span>
+                  <div class="stack-trace">java.lang.AssertionError: Unable to click product, Reason: chrome not reachable
+  (Session info: chrome=63.0.3239.84)
+  (Driver info: chromedriver=2.33.506120 (e3e53437346286c0bc2d2dc9aa4915ba81d9023f),platform=Windows NT 10.0.16299 x86_64) (WARNING: The server did not provide any stacktrace information)
+Command duration or timeout: 4.03 seconds
+Build info: version: &apos;2.45.0&apos;, revision: &apos;5017cb8e7ca8e37638dc3091b2440b90a1d8686f&apos;, time: &apos;2015-02-27 09:10:26&apos;
+System info: host: &apos;NEWT526&apos;, ip: &apos;172.27.96.1&apos;, os.name: &apos;Windows 10&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;1.8.0_151&apos;
+Driver info: org.openqa.selenium.chrome.ChromeDriver
+Capabilities [{applicationCacheEnabled=false, rotatable=false, mobileEmulationEnabled=false, networkConnectionEnabled=false, chrome={chromedriverVersion=2.33.506120 (e3e53437346286c0bc2d2dc9aa4915ba81d9023f), userDataDir=C:\Users\Shahed\AppData\Local\Temp\scoped_dir10744_10870}, takesHeapSnapshot=true, pageLoadStrategy=normal, databaseEnabled=false, handlesAlerts=true, hasTouchScreen=false, version=63.0.3239.84, platform=XP, browserConnectionEnabled=false, nativeEvents=true, acceptSslCerts=true, locationContextEnabled=true, webStorageEnabled=true, browserName=chrome, takesScreenshot=true, javascriptEnabled=true, cssSelectorsEnabled=true, setWindowRect=true, unexpectedAlertBehaviour=}]
+Session ID: c37fb64554cb1038d7bf2d77e84d9709
+*** Element info: {Using=xpath, value=//a[text()=&apos;Day of the Dead Scotch Bonnet Hot Sauce&apos;]} expected [true] but found [true]
+	at com.ecommerce.selenium.pagefactory.framework.pages.HomePage.Addtocart_BL(HomePage.java:41)
+	at com.ecommerce.selenium.pagefactory.framework.BroadLeaf_DesktopFlow.Addtocart(BroadLeaf_DesktopFlow.java:39)
+	at java.util.concurrent.ThreadPoolExecutor.runWorker(Unknown Source)
+	at java.util.concurrent.ThreadPoolExecutor$Worker.run(Unknown Source)
+	at java.lang.Thread.run(Unknown Source)
+... Removed 13 stack frames
+</div> <!-- stack-trace -->
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="Checkoutcart">
+                  </a> <!-- Checkoutcart -->
+                  <span class="method-name">Checkoutcart</span>
+                  <div class="stack-trace">java.lang.AssertionError: Unable to click product, Reason: null expected [true] but found [true]
+	at com.ecommerce.selenium.pagefactory.framework.pages.HomePage.Addtocart_BL(HomePage.java:41)
+	at com.ecommerce.selenium.pagefactory.framework.BroadLeaf_DesktopFlow.Checkoutcart(BroadLeaf_DesktopFlow.java:53)
+	at java.util.concurrent.ThreadPoolExecutor.runWorker(Unknown Source)
+	at java.util.concurrent.ThreadPoolExecutor$Worker.run(Unknown Source)
+	at java.lang.Thread.run(Unknown Source)
+... Removed 13 stack frames
+</div> <!-- stack-trace -->
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Ecommerce_test_run-class-failed -->
         </div> <!-- panel Ecommerce_test_run -->
         <div panel-name="test-xml-Ecommerce_test_run" class="panel">
           <div class="main-panel-header rounded-window-top">
@@ -112,13 +178,9 @@
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite thread-count=&quot;3&quot; name=&quot;Ecommerce test run&quot; parallel=&quot;methods&quot;&gt;
-  &lt;parameter name=&quot;persona&quot; value=&quot;Georgia&quot;/&gt;
-  &lt;parameter name=&quot;OSVersion&quot; value=&quot;11.2&quot;/&gt;
-  &lt;parameter name=&quot;deviceModel&quot; value=&quot;iPhone-6&quot;/&gt;
-  &lt;parameter name=&quot;mobileOS&quot; value=&quot;iOS&quot;/&gt;
   &lt;test name=&quot;Place Order&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.ecommerce.selenium.pagefactory.framework.OrderFlow_Mobile&quot;/&gt;
+      &lt;class name=&quot;com.ecommerce.selenium.pagefactory.framework.BroadLeaf_DesktopFlow&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Place Order --&gt;
 &lt;/suite&gt; &lt;!-- Ecommerce test run --&gt;
@@ -158,11 +220,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(0);
+data.addRows(2);
+data.setCell(0, 0, 0)
+data.setCell(0, 1, 'Addtocart')
+data.setCell(0, 2, 'com.ecommerce.selenium.pagefactory.framework.BroadLeaf_DesktopFlow')
+data.setCell(0, 3, 32272);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'Checkoutcart')
+data.setCell(1, 2, 'com.ecommerce.selenium.pagefactory.framework.BroadLeaf_DesktopFlow')
+data.setCell(1, 3, 28603);
 window.suiteTableData['Ecommerce_test_run']= { tableData: data, tableDiv: 'times-div-Ecommerce_test_run'}
 return data;
 }
               </script>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Ecommerce_test_run">
               </div> <!-- times-div-Ecommerce_test_run -->
             </div> <!-- times-div -->
@@ -187,6 +258,20 @@ return data;
             <span class="header-content">Methods in chronological order</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.ecommerce.selenium.pagefactory.framework.BroadLeaf_DesktopFlow</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <img src="failed.png">
+                </img>
+                <span class="method-name">Addtocart</span>
+                <span class="method-start">0 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <img src="failed.png">
+                </img>
+                <span class="method-name">Checkoutcart</span>
+                <span class="method-start">0 ms</span>
+              </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
