--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,2 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
+<table border="1">
+<tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
+<tr bgcolor="d2e7d9">  <td>18/01/04 13:46:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BroadLeaf_DesktopFlow.Addtocart()[pri:0, instance:com.ecommerce.selenium.pagefactory.framework.BroadLeaf_DesktopFlow@7085bdee]">Addtocart</td> 
+  <td>main@731260860</td>   <td></td> </tr>
+<tr bgcolor="d2e7d9">  <td>18/01/04 13:47:06</td>   <td>7840</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BroadLeaf_DesktopFlow.Checkoutcart()[pri:0, instance:com.ecommerce.selenium.pagefactory.framework.BroadLeaf_DesktopFlow@7085bdee]">Checkoutcart</td> 
+  <td>main@731260860</td>   <td></td> </tr>
 </table>
