--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,11 +11,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Checkoutcart</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>Addtocart</td>
+<td>placeorder</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
